--- a/jdk-bundles/pom.xml
+++ b/jdk-bundles/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>st.theori.openjdk</groupId>
 		<artifactId>jdk</artifactId>
-		<version>11.0.2.2</version>
+		<version>11.0.2.6</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -16,10 +16,9 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<download.url>https://download.java.net/java/GA/jdk11/9/GPL/</download.url>
-		<!-- to test locally, place files in a local directory
-		<download.url>file:///Users/.../zulu/</download.url>
-		-->
+<!-- 		<download.url>https://download.java.net/java/GA/jdk11/9/GPL/</download.url>
+ -->		<!-- to test locally, place files in a local directory -->
+		<download.url>file:///Users/loki/Downloads/openjdk/</download.url>
 
 		<download.file>openjdk-11.0.2_</download.file>
 		<download.unzippedFolder>jdk-11.0.2</download.unzippedFolder>
