--- a/jdk-bundles/st.theori.openjdk.win32.x86_64/pom.xml
+++ b/jdk-bundles/st.theori.openjdk.win32.x86_64/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>st.theori.openjdk</groupId>
 		<artifactId>bundles</artifactId>
-		<version>11.0.2.8</version>
+		<version>11.0.2.9</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -16,7 +16,12 @@
 	<packaging>eclipse-plugin</packaging>
 
 	<properties>
+<!-- 		OpenJDK:	
 		<download.filePostfix>windows-x64_bin.zip</download.filePostfix>
+
+			AdoptOpenJDK:
+ -->
+		<download.filePostfix>windows_hotspot_11.0.2_9.zip</download.filePostfix>
 		<download.type>zip</download.type>
 	</properties>
 
