--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,12 @@
 		<maven>3.0</maven>
 	</prerequisites>
 
-	<groupId>st.theori.openjdk</groupId>
+	<groupId>org.lamport.openjdk</groupId>
 	<artifactId>jdk</artifactId>
 	<version>11.0.2.9</version>
 	<packaging>pom</packaging>
 
-	<name>Bundled Oracle Java JDK</name>
+	<name>Bundled OpenJDK</name>
 
 	<properties>
 		<tycho-version>1.3.0</tycho-version>
@@ -24,9 +24,9 @@
 	</properties>
 
 	<modules>
-		<module>jdk-bundles</module>
-		<module>st.theori.openjdk.feature</module>
-		<module>update-site</module>
+		<module>org.lamport.openjdk</module>
+		<module>org.lamport.openjdk.feature</module>
+		<module>org.lamport.openjdk.p2repository</module>
 	</modules>
 
 	<repositories>
