--- a/jdk-bundles/st.theori.openjdk.win32.x86_64/pom.xml
+++ b/jdk-bundles/st.theori.openjdk.win32.x86_64/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>st.theori.openjdk</groupId>
 		<artifactId>bundles</artifactId>
-		<version>11.0.2.9</version>
+		<version>11.0.2.12</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -43,8 +43,8 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
+				<groupId>com.googlecode.maven-download-plugin</groupId>
+				<artifactId>download-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
