--- a/org.lamport.openjdk/pom.xml
+++ b/org.lamport.openjdk/pom.xml
@@ -40,6 +40,7 @@
 		<download.unzippedFolderPostfix></download.unzippedFolderPostfix>
 		<download.type>gzip</download.type>
 		<jre.folder>jre</jre.folder>
+		<additional.jdk.folder></additional.jdk.folder>
 	</properties>
 
 	<modules>
@@ -102,6 +103,12 @@
 										</else>
 									</ac:if>
 									<move file="${project.build.directory}/downloads/${download.unzippedFolder}${download.unzippedFolderPostfix}" tofile="${project.build.directory}/downloads/${jre.folder}"/>
+									<ac:if xmlns:ac="antlib:net.sf.antcontrib">
+										<isset property="download.additionalContent"/> 
+										<then>
+											<move file="${project.build.directory}/downloads/${download.unzippedFolder}/${download.additionalContent}" tofile="${project.build.directory}/downloads/${download.additionalContent}"/>
+										</then>
+									</ac:if>
 								</target>
 							</configuration>
 						</execution>
@@ -157,6 +164,7 @@
 								<directory>${project.build.directory}/downloads/</directory>
 								<includes>
 									<include>${jre.folder}/**/*</include>
+									<include>${additional.jdk.folder}</include>
 								</includes>
 								<excludes>
 									<!-- bin -->
@@ -168,8 +176,6 @@
 									<exclude>${jre.folder}/bin/orbd</exclude>
 									<exclude>${jre.folder}/bin/servertool</exclude>
 									<exclude>${jre.folder}/bin/javaws</exclude>
-									<exclude>${jre.folder}/bin/pack200</exclude>
-									<exclude>${jre.folder}/bin/unpack200</exclude>
 
 									<!-- bin [Microsoft Windows] -->
 									<exclude>${jre.folder}/bin/rmid.exe</exclude>
